--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -13,7 +13,7 @@ p {
 }
 
 p.small {
-    font-size: 16px;
+    font-size: 26px;
 }
 
 a,
@@ -22,8 +22,11 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #18bc9c;
 }
+
+/*The Teal
+*//*    color: #18bc9c;
+*/
 
 h1,
 h2,
@@ -31,8 +34,8 @@ h3,
 h4,
 h5,
 h6 {
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+/*    text-transform: uppercase;
+*/    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
 
@@ -63,7 +66,7 @@ hr.star-light {
 
 hr.star-light:after {
     color: #fff;
-    background-color: #18bc9c;
+    background-color: #C0C0C0;
 }
 
 hr.star-primary {
@@ -82,7 +85,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #18bc9c;
+    background: #C0C0C0;
 }
 
 header .container {
@@ -97,8 +100,8 @@ header img {
 
 header .intro-text .name {
     display: block;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+/*    text-transform: uppercase;
+*/    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2em;
     font-weight: 700;
 }
@@ -131,8 +134,9 @@ header .intro-text .skills {
         transition: padding .3s;
     }
 
-    .navbar-fixed-top .navbar-brand {
-        font-size: 2em;
+    .navbar-fixed-top .navbar-brand {.5
+        font-size: 1.5em;
+        font-color: #C0C0C0;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -144,11 +148,12 @@ header .intro-text .skills {
 
     .navbar-fixed-top.navbar-shrink .navbar-brand {
         font-size: 1.5em;
+        font-color: #C0C0C0;
     }
 }
 
 .navbar {
-    text-transform: uppercase;
+/*    text-transform: uppercase;*/
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
@@ -181,7 +186,7 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #18bc9c;
+    background: #C0C0C0;
 }
 
 section.success a,
@@ -274,7 +279,7 @@ section.success a.active {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: #18bc9c;
+    color: #C0C0C0;
     background: #fff;
 }
 
@@ -327,7 +332,7 @@ section.success a.active {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #18bc9c;
+    color: #C0C0C0;
 }
 
 form .row:first-child .floating-label-form-group {
